src/components/FishList/fishList.scss
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/variables" as *;

// Zones Popup component will take up the whole screen to hide overlapping components
.fish-list {
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgb(0, 0, 0, 0.5);
    z-index: 1;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;

    &__inner-container {
        z-index: 1;
        height: 95%;
        width: 95%;
        margin: $mobile-padding;
        padding: $mobile-padding;
        background-color: white;
        border-radius: 10px;
        @include flex();
        justify-content: center;
        border-radius: 8px;
        overflow-y: auto;

        @include tablet {
            margin: $tablet-padding;
            padding: $tablet-padding;
        }
    }

    &__close-container {
        width: 100%;
        @include flex;
        justify-content: flex-end;
    }
    
    &__close-button {
        align-self: flex-end;
        width: 20px;
    }

    &__title-container {
        width: 100%;
    }

    &__title {
        font-size: 28px;
    }

    &__list {
        list-style: none;
        overflow-y: auto;
        @include flex;
        flex-direction: column;
    }
}

